--- a/index.html
+++ b/index.html
@@ -3,41 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <title>The Archive_Web</title>
-
-    <!-- Chemin correct pour GitHub Pages -->
     <link rel="stylesheet" href="./css/style.css">
 </head>
-
 <body>
 
 <header>
-    <h1>The Archive_Web</h1>
-    <button id="theme-toggle">🌙 Mode sombre</button>
+    <div class="logo">The Archive_Web</div>
+    <nav class="top-nav">
+        <a href="#" class="nav-link active">Accueil</a>
+        <a href="#" class="nav-link">Collection</a>
+        <a href="#" class="nav-link">Pile à lire</a>
+        <a href="#" class="nav-link">Critiques</a>
+        <a href="#" class="nav-link">Filtre</a>
+        <a href="#" class="nav-link accent">+ Ajouter un tome</a>
+    </nav>
+    <button id="theme-toggle">🌙</button>
 </header>
 
-<!-- 🔍 Barre de recherche -->
-<div id="search-container">
+<section class="toolbar">
     <input type="text" id="search-input" placeholder="Rechercher une série, un tome, un auteur...">
-</div>
-
-<!-- 🔽 Tri des séries -->
-<div id="tri-container">
     <select id="tri-select">
-        <option value="">Trier...</option>
+        <option value="">Trier les séries...</option>
         <option value="serie-az">Séries A → Z</option>
         <option value="serie-za">Séries Z → A</option>
-        <option value="tomes-plus">Séries avec le plus de tomes</option>
-        <option value="tomes-moins">Séries avec le moins de tomes</option>
+        <option value="tomes-plus">Plus de tomes</option>
+        <option value="tomes-moins">Moins de tomes</option>
     </select>
-</div>
-
-<main>
-    <div id="liste-series"></div>
-</main>
-
-<!-- 🔽 Tri des tomes -->
-<div id="tri-tomes-container" style="display:none;">
-    <select id="tri-tomes-select">
+    <select id="tri-tomes-select" style="display:none;">
         <option value="">Trier les tomes...</option>
         <option value="numero-asc">Numéro (1 → 99)</option>
         <option value="numero-desc">Numéro (99 → 1)</option>
@@ -46,10 +38,12 @@
         <option value="alpha-asc">Nom (A → Z)</option>
         <option value="alpha-desc">Nom (Z → A)</option>
     </select>
-</div>
+</section>
 
-<!-- Chemin correct pour GitHub Pages -->
+<main>
+    <div id="liste-series"></div>
+</main>
+
 <script src="./js/app.js"></script>
-
 </body>
 </html>
