--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>The Archive — Tableau de bord</title>
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -95,6 +95,6 @@
 
     </main>
 
-    <script src="js/home.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
