--- a/index.html
+++ b/index.html
@@ -15,14 +15,11 @@
         <button id="toggle-menu" class="toggle-btn">⮜</button>
 
         <nav>
-            <a href="modules/todo/index.html">
-                <span class="icon">🗒️</span><span class="label">Todo</span>
+            <a href="modules/productivite/index.html">
+                <span class="icon">🗒️</span><span class="label">Daily Planner</span>
             </a>
             <a href="modules/budget/index.html">
                 <span class="icon">💰</span><span class="label">Budget</span>
-            </a>
-            <a href="modules/habits/index.html">
-                <span class="icon">🔥</span><span class="label">Habitudes</span>
             </a>
             <a href="modules/sport/index.html">
                 <span class="icon">🏋️</span><span class="label">Sport</span>
