--- a/modules/productivite/index.html
+++ b/modules/productivite/index.html
@@ -35,6 +35,15 @@
         <!-- HABITUDES -->
         <section class="card habits-card">
             <h2>Habitudes du jour</h2>
+
+            <p id="habit-score" class="habit-score">0 / 0 complétées</p>
+
+            <div class="habit-stats">
+                <p>Progression du jour : <strong id="habit-progress">0%</strong></p>
+                <p>Série actuelle : <strong id="habit-streak">0</strong> jours</p>
+                <p>Meilleur score : <strong id="habit-best">0</strong> jours</p>
+            </div>
+
             <ul id="habits-list"></ul>
             <button id="add-habit" class="add-btn">+</button>
         </section>
